<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mesacerta.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_restaurantDetailFragment"
            app:destination="@id/restaurantDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.mesacerta.ui.restaurant.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_restaurantDetailFragment"
            app:destination="@id/restaurantDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/reservationsFragment"
        android:name="com.example.mesacerta.ui.reservation.ReservationsFragment"
        android:label="@string/reservations"
        tools:layout="@layout/fragment_reservations">
        <action
            android:id="@+id/action_reservationsFragment_to_reservationDetailFragment"
            app:destination="@id/reservationDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.mesacerta.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/restaurantDetailFragment"
        android:name="com.example.mesacerta.ui.restaurant.RestaurantDetailFragment"
        android:label="@string/restaurant_details"
        tools:layout="@layout/fragment_restaurant_detail">
        <argument
            android:name="restaurantId"
            app:argType="integer" />
        <action
            android:id="@+id/action_restaurantDetailFragment_to_createReservationFragment"
            app:destination="@id/createReservationFragment" />
    </fragment>

    <fragment
        android:id="@+id/reservationDetailFragment"
        android:name="com.example.mesacerta.ui.reservation.ReservationDetailFragment"
        android:label="@string/reservation_details"
        tools:layout="@layout/fragment_reservation_detail">
        <argument
            android:name="reservationId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/createReservationFragment"
        android:name="com.example.mesacerta.ui.reservation.CreateReservationFragment"
        android:label="@string/create_reservation"
        tools:layout="@layout/fragment_create_reservation">
        <argument
            android:name="restaurantId"
            app:argType="integer" />
    </fragment>

</navigation>
